Consistent design - Login and Register scenes were created. #16

--- a/src/common/layouts/Private/components/Header/Header.scss
+++ b/src/common/layouts/Private/components/Header/Header.scss
@@ -10,9 +10,10 @@
     }
 
     div.slogan {
-        font-family: 'Pacifico';
+        font-family: 'Dancing Script';
+        font-weight: bold;
         font-style: italic;
-        font-size: 20pt;
+        font-size: 22pt;
         color: $primary-color;
     }
 
