--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,3 +1,3 @@
 // Colors
-$primary-color: #00B894;
-$primary-color-placeholder: #00b89398;
+$primary-color: #1890ff;
+$primary-color-placeholder: #188fff98;
