--- a/src/common/layouts/Private/components/Header/Header.scss
+++ b/src/common/layouts/Private/components/Header/Header.scss
@@ -34,16 +34,16 @@
     }
 
     // @Overwrite
-    .ant-menu > .ant-menu-item:hover,
-    .ant-menu > .ant-menu-submenu:hover,
-    .ant-menu > .ant-menu-item-active,
-    .ant-menu> .ant-menu-submenu-active,
-    .ant-menu > .ant-menu-item-open,
-    .ant-menu> .ant-menu-submenu-open,
-    .ant-menu > .ant-menu-item-selected,
-    .ant-menu > .ant-menu-submenu-selected {
-      color: $primary-color;
-      border-bottom: 2px solid $primary-color;
-    }
+    // .ant-menu > .ant-menu-item:hover,
+    // .ant-menu > .ant-menu-submenu:hover,
+    // .ant-menu > .ant-menu-item-active,
+    // .ant-menu> .ant-menu-submenu-active,
+    // .ant-menu > .ant-menu-item-open,
+    // .ant-menu> .ant-menu-submenu-open,
+    // .ant-menu > .ant-menu-item-selected,
+    // .ant-menu > .ant-menu-submenu-selected {
+    //   color: $primary-color;
+    //   border-bottom: 2px solid $primary-color;
+    // }
 
 }
