Register and Login with Google Firebase

--- a/src/common/layouts/Public/PublicLayout.scss
+++ b/src/common/layouts/Public/PublicLayout.scss
@@ -5,3 +5,10 @@
 	justify-content: space-between;
 	background-color: #dfe6e9;
 }
+
+.login-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
