--- a/src/scenes/Login/Login.scss
+++ b/src/scenes/Login/Login.scss
@@ -1,9 +1,5 @@
 .login-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-
+	
 	.slogan-auth {
 		top: 0px;
 		color: $primary-color;
@@ -21,8 +17,9 @@
 	align-items: center;
 	width: 500px;
 	background-color: white;
-	padding: 50px;;
-	padding-bottom: 30px;
+	padding: 45px;;
+	padding-bottom: 25px;
+	margin: 5px;
 	border-radius: 15px;
 	box-shadow: 0px 0px 5px rgba(90, 89, 89, 0.1);
 }
