--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,22 +1,23 @@
 .container-product {
+  width: 200px;
   position: relative;
-  width: 350px;
   padding-bottom: 20px;
-  padding-top: 10px;
   margin-bottom: 15px;
   margin-right: 10px;
-  border-radius: 6px;
+  border-radius: 10px;
   background-color: white;
   box-shadow: 0 0 6px rgba(42, 42, 42, 0.2);
 
   .product-image {
+    display: flex;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     margin-bottom: 10px;
+    // max-width: 200px;
+    // min-width: 100px;
   }
 
   .badge-container {
-    // position: absolute;
     bottom: 20px;
     display: flex;
     width: 100%;
@@ -24,5 +25,25 @@
     margin-right: 10px;
     align-items: center;
     justify-content: flex-start;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  .star-favorites {
+    border-radius: 5px;
+    position: absolute;
+    top: 5px;
+    right: -2px;
+  }
+}
+
+@media screen and (max-width:  1985px) {
+  .badge-container {
+    // position: absolute;
+    flex-direction: column;
+    // justify-content: space-between;
+    align-items: flex-start !important;
+    // top: 20px;
   }
 }
