--- a/src/scenes/Login/Login.scss
+++ b/src/scenes/Login/Login.scss
@@ -70,3 +70,18 @@
 	margin-top: 10px;
 	margin-bottom: 20px;
 }
+
+.spin-login {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	font-size: 12pt;
+	background-color: white;
+	box-shadow: 0px 0px 8px rgba(22, 22, 22, .1);
+	height: 120px;
+	width: 120px;
+	border-radius: 100px;
+	padding: 20px;
+}
